# Lem-in

./: --big-superposition.c  --big.c  --flow-one.c  --flow-one1.c  CMakeLists.txt  Makefile  README.md  ants.c  array_functions.c  author  bfs.c  comments_commands.c  help.c  lem-in.h  lem_in  lem_in.h  lem_main.c  map  output_and_free.c  print_path.c  random.c  reverse_path.c  rooms.c  validate.c  walking.c
lem_in.dSYM/Contents/Resources/DWARF/: lem_in
libft/: Makefile
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/: ft_atoi.c  ft_lstadd.c  ft_lstnew.c  ft_memalloc.c  ft_memset.c  ft_putstr.c  ft_strlen.c  ft_strsplit.c  ft_word_count.c  get_next_line.c
maps/: --big  --big-superposition  --big-superposition.c  --flow-one  --flow-one.c  --flow-one1.c  --flow-ten  --flow-ten.c  --flow-thousand  --flow-thousand.c  map
maps/mapserror/mapserr1/: 19double_coord
src/: lem_main.c
srcs/: ants.c  lem_main.c  rooms.c
